<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rowLocationText"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:gravity="center_vertical"
            android:text="@string/rowLocation"
            android:textColor="#000" />

        <TextView
            android:id="@+id/rowEditDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="@string/AreasScreenDate" />

        <Button
            android:id="@+id/rowAddButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"

            android:gravity="center"
            android:onClick="AddHandler"
            android:text="@string/add_barcodes" />

        <Button
            android:id="@+id/rowViewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"

            android:gravity="center"
            android:onClick="ViewHandler"
            android:text="@string/view_barcodes" />

        <Button
            android:id="@+id/rowDeleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:onClick="DeleteHandler"
            android:text="@string/delete_area" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>