<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/ActivityMainTextViewStockTakeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.25"
        android:text="@string/ActivityMainStockTakeName" />

    <Button
        android:id="@+id/ActivityMainButtonView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/ActivityMainView"
        android:onClick="StockTakeViewButtonClick"/>

    <Button
        android:id="@+id/ActivityMainButtonExport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:onClick="export"
        android:text="@string/ActivityMainExport" />
</LinearLayout>