<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rowLocationText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="@string/rowLocation"
                android:textColor="#000"
                android:layout_marginLeft="8dp"/>


            <TextView
                android:id="@+id/rowEditDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/AreasScreenDate" />

            <Button
                android:id="@+id/rowAddButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/add_barcodes"
                android:onClick="addBarcodesToArea"
                />

            <Button
                android:id="@+id/rowDeleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:onClick="deleteArea"
                android:text="@string/delete_area"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>