<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RowsScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="serif"
        android:gravity="center|top"
        android:text="@string/rowTitle"
        android:textColor="#000"
        android:textSize="40sp" />

    <TableLayout
        android:layout_marginTop="100dp"
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/ActivityMainTableRowTitles"
            android:padding="10dp">

            <TextView
                android:id="@+id/rowLocation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:textColor="#000"
                android:text="@string/rowLocation"/>
            <TextView
                android:id="@+id/rowView"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:text="@string/rowView"/>

            <TextView
                android:textColor="#000"
                android:id="@+id/rowDelete"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:text="@string/rowDelete"/>

        </TableRow>
        <View
            android:layout_height="3dip"
            android:layout_width="match_parent"
            android:background="#0A22BF"/>
    </TableLayout>
    <ListView
        android:id="@+id/rowBarcodes"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="150dp">
    </ListView>

    <Button
        android:id="@+id/ActivityMainAddNewStocktake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/rowAdd" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>