<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityMainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityMain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ScanningScreenToolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:background="@color/colorTimberSmartPurple"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/titleas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="serif"
            android:gravity="center|top"
            android:text="@string/ActivityMainHeaderBarTitle"
            android:textColor="@color/colorTimberSmartWhite"
            android:textSize="40sp" />
    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/ActivityMainTableRowTitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <TextView
                android:id="@+id/ActivityMainStockTakeNameRowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ActivityMainStockTakeName"
                android:textColor="#000" />

        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/ActivityMainListViewStocktakes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ActivityMainEditStocktake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="15dp"
            android:hint="@string/ActivityMainEditStocktake"/>

        <Button
            android:id="@+id/ActivityMainAddNewStocktake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@color/colorTimberSmartPurple"
            android:text="@string/ActivityMainAddNewStockTake"
            android:textColor="@color/colorTimberSmartWhite" />
    </LinearLayout>


</LinearLayout>